switch based on the ENV VARs

--- a/server/Makefile
+++ b/server/Makefile
@@ -30,19 +30,36 @@ lint:
 	@echo "Linting code..."
 	@golangci-lint run --fix
 
-## run: run in regtest mode
+## run: run in regtest mode with bitcoind
 run: clean
-	@echo "Running arkd in dev mode..."
-	@export ARK_NEUTRINO_PEER=localhost:18444; \
-	export ARK_ROUND_INTERVAL=10; \
+	@echo "Running arkd with Bitcoin Core in regtest mode ..."
+	@export ARK_ROUND_INTERVAL=10; \
 	export ARK_LOG_LEVEL=5; \
 	export ARK_NETWORK=regtest; \
 	export ARK_PORT=7070; \
 	export ARK_NO_TLS=true; \
 	export ARK_NO_MACAROONS=true; \
+	export ARK_MIN_RELAY_FEE=200; \
 	export ARK_TX_BUILDER_TYPE=covenantless; \
 	export ARK_ESPLORA_URL=http://localhost:3000; \
+	export ARK_BITCOIND_RPC_USER=admin1; \
+	export ARK_BITCOIND_RPC_PASS=123; \
+	export ARK_BITCOIND_RPC_HOST=localhost:18443; \
+	go run ./cmd/arkd
+
+## run-neutrino: run in regtest mode with neutrino
+run-neutrino: clean
+	@echo "Running arkd with Neutrino in regtest mode ..."
+	@export ARK_ROUND_INTERVAL=10; \
+	export ARK_LOG_LEVEL=5; \
+	export ARK_NETWORK=regtest; \
+	export ARK_PORT=7070; \
+	export ARK_NO_TLS=true; \
+	export ARK_NO_MACAROONS=true; \
 	export ARK_MIN_RELAY_FEE=200; \
+	export ARK_TX_BUILDER_TYPE=covenantless; \
+	export ARK_ESPLORA_URL=http://localhost:3000; \
+	export ARK_NEUTRINO_PEER=localhost:18444; \
 	go run ./cmd/arkd
 
 ## 	export ARK_NEUTRINO_PEER=44.240.54.180:38333 ; \
