--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build clean cov help intergrationtest lint run run-signet test vet proto proto-lint
+.PHONY: build clean cov help intergrationtest lint run run-neutrino run-neutrino-signet test vet proto proto-lint
 
 ## build: build for all platforms
 build:
@@ -45,6 +45,7 @@ run: clean
 	export ARK_BITCOIND_RPC_USER=admin1; \
 	export ARK_BITCOIND_RPC_PASS=123; \
 	export ARK_BITCOIND_RPC_HOST=localhost:18443; \
+	export ARK_DATADIR=./data/regtest; \
 	go run ./cmd/arkd
 
 ## run-neutrino: run in regtest mode with neutrino
@@ -60,13 +61,12 @@ run-neutrino: clean
 	export ARK_TX_BUILDER_TYPE=covenantless; \
 	export ARK_ESPLORA_URL=http://localhost:3000; \
 	export ARK_NEUTRINO_PEER=localhost:18444; \
+	export ARK_DATADIR=./data/regtest; \
 	go run ./cmd/arkd
 
-## 	export ARK_NEUTRINO_PEER=44.240.54.180:38333 ; \
-
-## run: run in signet mode
-run-signet: clean
-	@echo "Running arkd in signet mode..."
+## run-neutrino-signet: run in signet mode
+run-neutrino-signet: clean
+	@echo "Running arkd with Neutrino in signet mode ..."
 	@export ARK_ROUND_INTERVAL=10; \
 	export ARK_LOG_LEVEL=5; \
 	export ARK_NETWORK=signet; \
@@ -77,7 +77,7 @@ run-signet: clean
 	export ARK_ESPLORA_URL=https://mutinynet.com/api; \
 	export ARK_NEUTRINO_PEER=45.79.52.207:38333; \
 	export ARK_MIN_RELAY_FEE=200; \
-	export ARK_DATADIR=./tmp/signet/arkd-data; \
+	export ARK_DATADIR=./data/signet; \
 	go run ./cmd/arkd
 
 ## test: runs unit and component tests
