wallet: bitcoind support with RPC polling  (#254)
* support bitcoind connection

* fix: wallet should be the varibale, not s.wallet

* block cache: up to 2M blocks

* WithBitcoind wait for sync

* WithBitcoind rename

* switch based on the ENV VARs

* Add make targets

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build clean cov help intergrationtest lint run run-signet test vet proto proto-lint
+.PHONY: build clean cov help intergrationtest lint run run-neutrino run-neutrino-signet test vet proto proto-lint
 
 ## build: build for all platforms
 build:
@@ -30,26 +30,43 @@ lint:
 	@echo "Linting code..."
 	@golangci-lint run --fix
 
-## run: run in regtest mode
+## run: run in regtest mode with bitcoind
 run: clean
-	@echo "Running arkd in dev mode..."
-	@export ARK_NEUTRINO_PEER=localhost:18444; \
-	export ARK_ROUND_INTERVAL=10; \
+	@echo "Running arkd with Bitcoin Core in regtest mode ..."
+	@export ARK_ROUND_INTERVAL=10; \
 	export ARK_LOG_LEVEL=5; \
 	export ARK_NETWORK=regtest; \
 	export ARK_PORT=7070; \
 	export ARK_NO_TLS=true; \
 	export ARK_NO_MACAROONS=true; \
+	export ARK_MIN_RELAY_FEE=200; \
 	export ARK_TX_BUILDER_TYPE=covenantless; \
 	export ARK_ESPLORA_URL=http://localhost:3000; \
-	export ARK_MIN_RELAY_FEE=200; \
+	export ARK_BITCOIND_RPC_USER=admin1; \
+	export ARK_BITCOIND_RPC_PASS=123; \
+	export ARK_BITCOIND_RPC_HOST=localhost:18443; \
+	export ARK_DATADIR=./data/regtest; \
 	go run ./cmd/arkd
 
-## 	export ARK_NEUTRINO_PEER=44.240.54.180:38333 ; \
+## run-neutrino: run in regtest mode with neutrino
+run-neutrino: clean
+	@echo "Running arkd with Neutrino in regtest mode ..."
+	@export ARK_ROUND_INTERVAL=10; \
+	export ARK_LOG_LEVEL=5; \
+	export ARK_NETWORK=regtest; \
+	export ARK_PORT=7070; \
+	export ARK_NO_TLS=true; \
+	export ARK_NO_MACAROONS=true; \
+	export ARK_MIN_RELAY_FEE=200; \
+	export ARK_TX_BUILDER_TYPE=covenantless; \
+	export ARK_ESPLORA_URL=http://localhost:3000; \
+	export ARK_NEUTRINO_PEER=localhost:18444; \
+	export ARK_DATADIR=./data/regtest; \
+	go run ./cmd/arkd
 
-## run: run in signet mode
-run-signet: clean
-	@echo "Running arkd in signet mode..."
+## run-neutrino-signet: run in signet mode
+run-neutrino-signet: clean
+	@echo "Running arkd with Neutrino in signet mode ..."
 	@export ARK_ROUND_INTERVAL=10; \
 	export ARK_LOG_LEVEL=5; \
 	export ARK_NETWORK=signet; \
@@ -60,7 +77,7 @@ run-signet: clean
 	export ARK_ESPLORA_URL=https://mutinynet.com/api; \
 	export ARK_NEUTRINO_PEER=45.79.52.207:38333; \
 	export ARK_MIN_RELAY_FEE=200; \
-	export ARK_DATADIR=./tmp/signet/arkd-data; \
+	export ARK_DATADIR=./data/signet; \
 	go run ./cmd/arkd
 
 ## test: runs unit and component tests
