--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -47,10 +47,11 @@ jobs:
           go-version: '>=1.22.6'
       - uses: actions/checkout@v3
       - name: check linting
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
           version: v1.54
           working-directory: ./server
+          args: --verbose
       - name: check code integrity
         uses: securego/gosec@master
         with:
@@ -71,10 +72,11 @@ jobs:
           go-version: '>=1.22.6'
       - uses: actions/checkout@v3
       - name: check linting
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
           version: v1.54
           working-directory: ./pkg/client-sdk
+          args: --verbose
       - name: check code integrity
         uses: securego/gosec@master
         with:
