--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -12,8 +12,10 @@ services:
       - ARK_ROUND_LIFETIME=512
       - ARK_TX_BUILDER_TYPE=covenantless
       - ARK_MIN_RELAY_FEE=200
-      - ARK_NEUTRINO_PEER=bitcoin:18444
       - ARK_ESPLORA_URL=http://chopsticks:3000
+      - ARK_BITCOIND_RPC_USER=admin1
+      - ARK_BITCOIND_RPC_PASS=123
+      - ARK_BITCOIND_RPC_HOST=bitcoin:18443
       - ARK_NO_TLS=true
       - ARK_NO_MACAROONS=true
     ports:
