[SDK] Add Transaction History (#288)
* tx history

* fix

* fix

* pr review refactor

* pr review refactor

* fix

* pr review refactor

* exclude gosec G115 Integer Overflow Conversion

* ignore some gosec errs

* ignore some gosec errs

* ignore createdat in test assertion

* Fixes (#7)

* Fixes

* Fixes

* Update golang (#8)

* update gha golangci-lint version

* update gha golangci-lint version

* fix linting issues

* fix linting issues

* fix linting issues

* add linter timeout

---------

Co-authored-by: Pietralberto Mazza <18440657+altafan@users.noreply.github.com>

--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -47,14 +47,15 @@ jobs:
           go-version: '>=1.22.6'
       - uses: actions/checkout@v3
       - name: check linting
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.54
+          version: v1.61
           working-directory: ./server
+          args: --timeout 5m
       - name: check code integrity
         uses: securego/gosec@master
         with:
-          args: "-severity high -quiet ./..."
+          args: "-severity high -quiet -exclude=G115 ./..."
       - run: go get -v -t -d ./...
       - name: unit testing
         run: make test
@@ -71,14 +72,15 @@ jobs:
           go-version: '>=1.22.6'
       - uses: actions/checkout@v3
       - name: check linting
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.54
+          version: v1.61
           working-directory: ./pkg/client-sdk
+          args: --timeout 5m
       - name: check code integrity
         uses: securego/gosec@master
         with:
-          args: "-severity high -quiet ./..."
+          args: "-severity high -quiet -exclude=G115 ./..."
       - run: go get -v -t -d ./...
       - name: unit testing
         run: make test
