--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -19,6 +19,7 @@ services:
       - ARK_NO_TLS=true
       - ARK_NO_MACAROONS=true
       - ARK_DATADIR=/app/data
+      - BITCOIN_REGTEST_URL=http://chopsticks:3000
     ports:
       - "7070:7070"
     volumes:
