Implement background VTXO syncing and database insertion
- Add listenForVtxos function to poll server for new VTXOs
- Implement listenToVtxoChan to process and insert VTXOs and transactions
- Handle both spendable and spent VTXOs, as well as boarding transactions
- Use goroutines and channels for asynchronous processing
- Add error handling and logging for better debugging

--- a/server/Makefile
+++ b/server/Makefile
@@ -108,7 +108,7 @@ mig_down_yes:
 	@"yes" | migrate -database "sqlite://path/to/database" -path ./internal/infrastructure/db/sqlite/migration/ down
 
 ## vet_db: check if mig_up and mig_down are ok
-vet_db: recreatedb mig_up mig_down_yes
+vet_db: mig_up mig_down_yes
 	@echo "vet db migration scripts..."
 
 ## sqlc: gen sql
