--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -1,9 +1,7 @@
 services:
   clarkd:
     container_name: clarkd 
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: test
     restart: unless-stopped
     environment:
       - ARK_ROUND_INTERVAL=10
@@ -12,9 +10,7 @@ services:
       - ARK_ROUND_LIFETIME=512
       - ARK_TX_BUILDER_TYPE=covenantless
       - ARK_ESPLORA_URL=http://chopsticks:3000
-      - ARK_BITCOIND_RPC_USER=admin1
-      - ARK_BITCOIND_RPC_PASS=123
-      - ARK_BITCOIND_RPC_HOST=bitcoin:18443
+      - ARK_NEUTRINO_PEER=bitcoin:18444
       - ARK_NO_TLS=true
       - ARK_NO_MACAROONS=true
       - ARK_DATADIR=/app/data
