--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -22,6 +22,13 @@ services:
     volumes:
       - type: tmpfs
         target: /app/data
+  nak:
+    container_name: nak
+    build:
+      context: .
+      dockerfile: nak.Dockerfile
+    ports:
+      - "10547:10547"
 
 networks:
   default:
