allow npub to be registered

--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -17,6 +17,7 @@ services:
       - ARK_NO_TLS=true
       - ARK_NO_MACAROONS=true
       - ARK_DATADIR=/app/data
+      - ARK_NOSTR_DEFAULT_RELAYS=ws://nak:10547
     ports:
       - "7070:7070"
     volumes:
