simulation - move from ws to http

--- a/simulation/remote/client/Dockerfile
+++ b/simulation/remote/client/Dockerfile
@@ -48,5 +48,7 @@ RUN ls -la . && \
     chmod +x /arkclient && \
     file /arkclient
 
+EXPOSE 9000
+
 # Use the binary as entrypoint
 ENTRYPOINT ["./arkclient"]
