--- a/simulation/remote/infra/cloudformation.yaml
+++ b/simulation/remote/infra/cloudformation.yaml
@@ -127,6 +127,10 @@ Resources:
           ToPort: !Ref AspPort
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
